--- a/views/register.ejs
+++ b/views/register.ejs
@@ -33,7 +33,7 @@
 
     <form action="/user/signup" method="POST">
       <input id="signin-name" name="name" type="text" placeholder="Nombre Completo" required />
-      <input id="signin-email" type="email" placeholder="Correo" name="email" required />
+      <input id="signin-email" type="email" placeholder="Correo" name="username" required />
       <input id="signin-password" type="password" placeholder="Contraseña" name="password" minlength="6" required />
 
       <input id="signin-confirm-pw" type="password" placeholder="Confirma tu contraseña" minlength="6" required />
