--- a/views/editAnuncio.ejs
+++ b/views/editAnuncio.ejs
@@ -34,7 +34,7 @@
     <h1>Edita tu anuncio:</h1>
     <form class="formAnuncio" action="/anuncio/save-changes" method="post">
 
-      <input type="hidden" name="anuncioId" value="<%= anuncio.id %>">
+      <input type="hidden" name="id" value="<%= anuncio.id %>">
 
       <!-- Tipo de Anuncio -->
       <label id="tipo_inmueble" >Tipo de Anuncio</label>
