--- a/views/newAnuncio.ejs
+++ b/views/newAnuncio.ejs
@@ -44,7 +44,7 @@
 
       <!-- Título -->
       <label id="titulo" >Título del Anuncio</label>
-      <input type="text" name="titulo" placeholder="Escribe el título...">
+      <input type="text" name="titulo" maxlength="80"  placeholder="Escribe el título...">
 
       <!-- Descripción -->
       <label id="descripcion" >Descripción del Anuncio</label>
