--- a/public/styles/anuncios.css
+++ b/public/styles/anuncios.css
@@ -68,6 +68,13 @@ html, body {
     .login-back {
       display: flex;
       align-items: center;
+      padding: 10px;
+      border-radius: 12px;
+    }
+
+      /* Cuando se toca o presiona en móvil */
+    .login-back:active {
+      background-color: rgba(0, 0, 0, 0.163); /* opcional, para feedback visual */
     }
 
     .back-text {
@@ -156,6 +163,10 @@ html, body {
     }
 
     .submit-btn {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 8px;
       margin-top: 25px;
       background: #0078D7;
       color: #fff;
@@ -169,6 +180,27 @@ html, body {
     .submit-btn:hover {
       background: #005a9e;
     }
+
+    .submit-btn.loading {
+  opacity: 0.8;
+  cursor: not-allowed;
+}
+
+/* Spinner de carga */
+.spinner {
+  width: 18px;
+  height: 18px;
+  border: 3px solid white;
+  border-top-color: transparent;
+  border-radius: 50%;
+  animation: spin 0.8s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
 
     .select-numero {
         padding: 8px;
@@ -247,7 +279,6 @@ html, body {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(90px, 1fr));
   gap: 10px;
-  max-height: 240px;
   /*overflow-y: auto;*/
   box-shadow: inset 0 1px 2px rgba(0,0,0,0.05);
 }
@@ -350,14 +381,34 @@ html, body {
       justify-content: center;
       cursor: pointer;
       font-family: Helvetica, Arial, sans-serif;
-      padding: 7px;
+      padding: 7.1px;
       border-radius: 10px;
     }
 
     /* Efecto hover */
-.guardar-btn:hover {
-  background-color: var(--color-fondo);
-}
+    .guardar-btn:hover {
+      background-color: var(--color-fondo);
+    }
+
+    .editar-btn {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      margin-right: 5px;
+      font-family: Helvetica, Arial, sans-serif;
+      padding: 9px 5px;
+      border-radius: 10px;
+      background-color: var(--color-fondo);
+      border: none;
+    }
+
+    /* Efecto hover */
+    .editar-btn:hover {
+      background-color: var(--yellow-logo);
+    }
+
+
 
 
         .icono {
@@ -1041,6 +1092,7 @@ html, body {
       line-height: 1.6;
       overflow: hidden;
       transition: max-height 0.4s ease;
+      white-space: pre-line;
     }
 
     .descripcion-texto.corto {
@@ -1240,5 +1292,20 @@ html, body {
     margin-left: 10px;
     margin-right: 10px;
   }
+
+  .vista-previa {
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  }
+  .item-imagen {
+    width: 145px;
+  }
+
+  .login-back {
+    margin-top: 15px;
+    padding: 10px;
+    border-radius: 12px;
+  }
+
+
 
     }
